tests/errors/arrow_bad_params.lq
# Invalid arrow-function parameters must be a clean compile error, not a crash.
let bad = (a + b) => a
